modified:   automated-issue-ref.ipynb

--- a/automated-issue-ref.ipynb
+++ b/automated-issue-ref.ipynb
@@ -343,8 +343,10 @@
     "                    missing_milestones.append([title,issue_num])\n",
     "                    \n",
     "#rewrite lineage_notes.txt\n",
-    "\n",
-    "    \n",
+    "w=open(\"autoref/missing_refs.txt\",'w')\n",
+    "for item in missing_milestones:\n",
+    "    print(item[0],'#'+item[1],file=w)\n",
+    "w.close()\n",
     "        \n"
    ]
   },
@@ -356,10 +358,25 @@
    "outputs": [],
    "source": [
     "#final rewrite of lineage_notes.txt\n",
+    "w=open(\"autoref/missing_refs.txt\",'r')\n",
+    "data=w.readlines()\n",
+    "w.close()\n",
+    "missing_refs={}\n",
+    "for line in data:\n",
+    "    linsp=line.split()\n",
+    "    missing_refs[linsp[0]]=linsp[1].replace('\\n','')\n",
+    "\n",
+    "w=open(\"lineage_notes.txt\",'r')\n",
+    "data=w.readlines()\n",
+    "w.close()\n",
+    "for i in range(len(data)):\n",
+    "    linsp=data[i].split()\n",
+    "    if linsp[0] in missing_refs:\n",
+    "        data[i]=data[i].replace('\\n','')+\" From \"+missing_refs[linsp[0]]+'\\n'\n",
+    "\n",
     "w=open(\"lineage_notes.txt\",'w')\n",
-    "for num in range(len(lineage_notes)):\n",
-    "    print(lineage_notes[num],end='',file=w)\n",
-    "w.close()"
+    "w.writelines(data)\n",
+    "w.close()\n"
    ]
   },
   {
