modified:   automated-issue-ref.ipynb 	modified:   autoref/milestone_sub.txt 	modified:   autoref/missing_refs.txt

--- a/automated-issue-ref.ipynb
+++ b/automated-issue-ref.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "f64573a2",
    "metadata": {},
    "outputs": [],
@@ -15,6 +15,8 @@
     "# the number of milestone we start to read\n",
     "start_milestone=1\n",
     "start_sub_milestone=1\n",
+    "end_milestone=795\n",
+    "end_sub_milestone=13\n",
     "def read_milestone(num,di='cov-lineages/pango-designation'):\n",
     "    # or sars-cov-2 proj if it starts to add milestones\n",
     "    url=\"https://github.com/\"+di+\"/milestone/\"+str(num)\n",
@@ -38,21 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "769f2d32",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "796 HTTP Error 404: Not Found\n",
-      "8 HTTP Error 404: Not Found\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# read milestones \n",
     "milestone_end=False\n",
@@ -62,6 +55,7 @@
     "milestone_sub=start_sub_milestone\n",
     "import os \n",
     "listd=os.listdir()\n",
+    "\n",
     "\n",
     "if not(\"autoref\" in listd):\n",
     "    os.mkdir(\"autoref\")\n",
@@ -80,7 +74,7 @@
     "                milestone_list.append([linsp[0],linsp[1]])\n",
     "            # don't read twice for old milestones\n",
     "            if issue>=milestone:\n",
-    "                milestone=issue+1          \n",
+    "                milestone=issue+1\n",
     "    w.close()\n",
     "\n",
     "if (\"milestone_sub.txt\" in lista):\n",
@@ -104,7 +98,7 @@
     "    print(item[0],item[1],file=w)\n",
     "\n",
     "\n",
-    "while not(milestone_end):\n",
+    "while (milestone<=end_milestone):\n",
     "    try:\n",
     "        title=read_milestone(milestone)\n",
     "        for item in title:\n",
@@ -112,7 +106,7 @@
     "            print(milestone,item,file=w)\n",
     "    except Exception as e:\n",
     "        print(milestone,e)\n",
-    "        milestone_end=True\n",
+    "        \n",
     "    milestone+=1\n",
     "    if milestone%10==0:\n",
     "        print(\"Reading Milestone\",milestone)\n",
@@ -124,7 +118,7 @@
     "    print(item[0],item[1],file=w)\n",
     "\n",
     "milestone_end=False\n",
-    "while not(milestone_end):\n",
+    "while (milestone_sub<=end_sub_milestone):\n",
     "    try:\n",
     "        title=read_milestone(milestone_sub,di=\"sars-cov-2-variants/lineage-proposals\")\n",
     "        for item in title:\n",
@@ -132,9 +126,9 @@
     "            print(milestone_sub,item,file=w)\n",
     "    except Exception as e:\n",
     "        print(milestone_sub,e)\n",
-    "        milestone_end=True\n",
+    "        \n",
     "    milestone_sub+=1\n",
-    "    if milestone%10==0:\n",
+    "    if milestone_sub%10==0:\n",
     "        print(\"Reading Milestone in sars-cov-2-variants \",milestone)\n",
     "\n",
     "w.close()\n",
@@ -146,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "88a367db",
    "metadata": {},
    "outputs": [],
@@ -175,49 +169,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "a56544a8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['BA.2.75.9', '#1098']\n",
-      "['CB.1', '#1098']\n",
-      "['CK.2', '#1190']\n",
-      "['CK.2.1.1', '#1190']\n",
-      "['BA.5.2.36', '#1203']\n",
-      "['CT.1', '#1203']\n",
-      "['BA.5.2.38', '#1254']\n",
-      "['DA.1', '#1254']\n",
-      "['AY.13', '#198']\n",
-      "['AY.14', '#198']\n",
-      "['AY.15', '#198']\n",
-      "['AY.16', '#198']\n",
-      "['AY.17', '#198']\n",
-      "['AY.18', '#198']\n",
-      "['AY.19', '#198']\n",
-      "['AY.20', '#198']\n",
-      "['AY.21', '#198']\n",
-      "['AY.22', '#198']\n",
-      "['AY.34.1.1', '#255']\n",
-      "['AY.58', '#286']\n",
-      "['AY.63', '#286']\n",
-      "['AY.99', '#258']\n",
-      "['AY.99.1', '#258']\n",
-      "['AY.99.2', '#258']\n",
-      "['AY.112.1', '#283']\n",
-      "['AY.121.1', '#344']\n",
-      "['AY.122', '#320']\n",
-      "['EG.4.2', 'sars-cov-2-variants/lineage-proposals/#46']\n",
-      "['GY.6', 'sars-cov-2-variants/lineage-proposals/#308']\n",
-      "['XBB.1.32', '#1827']\n",
-      "['XBB.1.37', '#1929']\n",
-      "['XBF.1.1', '#1651']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# read lineage_notes.txt\n",
     "\n",
@@ -239,7 +194,7 @@
     "        item_to_milestone[to_add]=item[1]\n",
     "        \n",
     "for item in milestone_list_sub:\n",
-    "    to_add='sars-cov-2-variants/lineage-proposals/#'+str(item[0])\n",
+    "    to_add='sars-cov-2-variants/lineage-proposals#'+str(item[0])\n",
     "    all_milestones[item[1]]=to_add\n",
     "    if to_add in item_to_milestone:\n",
     "        item_to_milestone[to_add]+='+'+item[1]\n",
@@ -260,7 +215,7 @@
     "                if 'sars' in all_milestones[title]:\n",
     "                    issue_num=read_milestone_issues(title,di='sars-cov-2-variants/lineage-proposals')\n",
     "                    if issue_num!=0:\n",
-    "                        missing_milestones.append([title,'sars-cov-2-variants/lineage-proposals/#'+str(issue_num)])\n",
+    "                        missing_milestones.append([title,'sars-cov-2-variants/lineage-proposals#'+str(issue_num)])\n",
     "                        print(missing_milestones[-1])\n",
     "                else:\n",
     "                    issue_num=read_milestone_issues(title)\n",
