modified:   automated-issue-ref.ipynb

--- a/automated-issue-ref.ipynb
+++ b/automated-issue-ref.ipynb
@@ -212,6 +212,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f5b15585",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def examine_line(line):\n",
+    "    # deal with issues/ situation\n",
+    "    if 'issues/' in line:\n",
+    "        linsp=line.split('issues/')\n",
+    "        rel=linsp[0]+'issues/'\n",
+    "        pos=0\n",
+    "        while (linsp[1][pos]>='0' and linsp[1][pos]<='9' and pos<len(linsp[1])):\n",
+    "            pos+=1\n",
+    "        rel=rel+linsp[1][:pos]+'\\n'\n",
+    "        return rel\n",
+    "    if '#' in line:\n",
+    "        return line\n",
+    "    return ''\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 42,
    "id": "a56544a8",
    "metadata": {},
@@ -311,7 +334,7 @@
     "    if (len(linsp)>=2):\n",
     "        title=linsp[0]\n",
     "        # for all lineages without an issue label but with a milestone\n",
-    "        if not(\"#\" in line):\n",
+    "        if not('#' in line or 'issues/' in line):\n",
     "            if title in all_milestones:\n",
     "                # this time we need to deal with the milestone \n",
     "                if 'sars' in all_milestones[title]:\n",
@@ -335,10 +358,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "id": "1c9369e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Add  2  references from cov-lineages/pango-designation.\n",
+      "Add  34  references from sars-cov-2-variants/lineage-proposals.\n"
+     ]
+    }
+   ],
    "source": [
     "#final rewrite of lineage_notes.txt\n",
     "w=open(\"autoref/missing_refs.txt\",'r')\n",
@@ -377,7 +409,19 @@
    "id": "7756372f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# fix some bug to adapt to new manual format that does not contain #. \n",
+    "w=open(\"lineage_notes.txt\",'r')\n",
+    "lines=w.readlines()\n",
+    "for i in range(len(lines)):\n",
+    "    em=examine_line(lines[i])\n",
+    "    if em!='':\n",
+    "        lines[i]=em\n",
+    "w.close()\n",
+    "w=open(\"lineage_notes.txt\",'w')\n",
+    "w.writelines(lines)\n",
+    "w.close()\n"
+   ]
   },
   {
    "cell_type": "code",
