update automated-issue-ref.ipynb to adapt to the new manual ref format   remove some duplicated autorefs in lineage_notes.txt

--- a/automated-issue-ref.ipynb
+++ b/automated-issue-ref.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f5b15585",
    "metadata": {},
    "outputs": [],
@@ -418,7 +418,7 @@
     "    if em!='':\n",
     "        lines[i]=em\n",
     "w.close()\n",
-    "w=open(\"lineage_notes.txt\",'w')\n",
+    "w=open(\"lineage_notes.txt\",'w',newline='\\n')\n",
     "w.writelines(lines)\n",
     "w.close()\n"
    ]
