add 9 autorefs to lineage_notes.txt

--- a/automated-issue-ref.ipynb
+++ b/automated-issue-ref.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "f64573a2",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
     "start_milestone=1\n",
     "start_sub_milestone=1\n",
     "end_milestone=801\n",
-    "end_sub_milestone=51\n",
+    "end_sub_milestone=59\n",
     "def read_milestone(num,di='cov-lineages/pango-designation',output_format='sep'):\n",
     "    # or sars-cov-2 proj if it starts to add milestones\n",
     "    url=\"https://github.com/\"+di+\"/milestone/\"+str(num)\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "769f2d32",
    "metadata": {
     "scrolled": false
@@ -57,13 +57,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading Milestone 40\n",
-      "Reading Milestone 440\n",
-      "Reading Milestone 610\n",
       "801 HTTP Error 404: Not Found\n",
       "10 HTTP Error 404: Not Found\n",
-      "Reading Milestone in sars-cov-2-variants  30\n",
-      "51 HTTP Error 404: Not Found\n"
+      "59 HTTP Error 404: Not Found\n",
+      "Reading Milestone in sars-cov-2-variants  60\n"
      ]
     }
    ],
@@ -165,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "88a367db",
    "metadata": {},
    "outputs": [],
@@ -212,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "f5b15585",
    "metadata": {},
    "outputs": [],
@@ -235,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "a56544a8",
    "metadata": {},
    "outputs": [
@@ -243,55 +240,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['FK.1.1.1', 'sars-cov-2-variants/lineage-proposals#368']\n",
-      "['FK.1.4.1', 'sars-cov-2-variants/lineage-proposals#88']\n",
-      "['HM.1', 'sars-cov-2-variants/lineage-proposals#59']\n",
-      "39\n",
-      "FT.3+FT.3.1\n",
-      "['FT.3', 'sars-cov-2-variants/lineage-proposals#266']\n",
-      "39\n",
-      "FT.3+FT.3.1\n",
-      "['FT.3.1', 'sars-cov-2-variants/lineage-proposals#266']\n",
-      "['FT.3.1.1', '#2140']\n",
-      "['HR.1', 'sars-cov-2-variants/lineage-proposals#323']\n",
+      "['HP.1', 'sars-cov-2-variants/lineage-proposals#277']\n",
+      "['HP.1.1', 'sars-cov-2-variants/lineage-proposals#277']\n",
+      "['HZ.1', 'sars-cov-2-variants/lineage-proposals#514']\n",
       "HQ.1 list index out of range\n",
-      "31\n",
-      "XBB.1.5.93+HD.1++HD.1.1\n",
-      "['XBB.1.5.93', 'sars-cov-2-variants/lineage-proposals#363']\n",
-      "31\n",
-      "XBB.1.5.93+HD.1++HD.1.1\n",
-      "['HD.1.1', 'sars-cov-2-variants/lineage-proposals#363']\n",
-      "['HN.1', 'sars-cov-2-variants/lineage-proposals#408']\n",
-      "['FL.21.1', '#2143']\n",
-      "['FL.21.2', 'sars-cov-2-variants/lineage-proposals#187']\n",
-      "['FL.29', 'sars-cov-2-variants/lineage-proposals#119']\n",
-      "['HK.1', 'sars-cov-2-variants/lineage-proposals#359']\n",
-      "['HK.2', 'sars-cov-2-variants/lineage-proposals#432']\n",
-      "['HK.3', 'sars-cov-2-variants/lineage-proposals#414']\n",
-      "['EG.5.1.3', 'sars-cov-2-variants/lineage-proposals#222']\n",
-      "['EG.5.1.4', 'sars-cov-2-variants/lineage-proposals#428']\n",
-      "['EG.5.1.6', 'sars-cov-2-variants/lineage-proposals#394']\n",
-      "['EG.5.2.1', 'sars-cov-2-variants/lineage-proposals#189']\n",
-      "['EG.5.2.3', 'sars-cov-2-variants/lineage-proposals#353']\n",
-      "['EG.9', 'sars-cov-2-variants/lineage-proposals#280']\n",
-      "['EG.9.1', 'sars-cov-2-variants/lineage-proposals#57']\n",
-      "38\n",
-      "EG.10++EG.10.1\n",
-      "['EG.10', 'sars-cov-2-variants/lineage-proposals#346']\n",
-      "38\n",
-      "EG.10++EG.10.1\n",
-      "['EG.10.1', 'sars-cov-2-variants/lineage-proposals#346']\n",
-      "['GY.4', 'sars-cov-2-variants/lineage-proposals#345']\n",
-      "['XBB.1.16.17', 'sars-cov-2-variants/lineage-proposals#354']\n",
-      "['XBB.1.16.18', 'sars-cov-2-variants/lineage-proposals#276']\n",
-      "['GA.4', 'sars-cov-2-variants/lineage-proposals#265']\n",
-      "['GW.5', 'sars-cov-2-variants/lineage-proposals#61']\n",
-      "['XBB.1.19.2', 'sars-cov-2-variants/lineage-proposals#233']\n",
-      "['FY.4.1.1', 'sars-cov-2-variants/lineage-proposals#302']\n",
-      "['FY.7', 'sars-cov-2-variants/lineage-proposals#257']\n",
-      "['HU.2', 'sars-cov-2-variants/lineage-proposals#364']\n",
-      "['XBB.1.31.1', 'sars-cov-2-variants/lineage-proposals#141']\n",
-      "['HL.1', 'sars-cov-2-variants/lineage-proposals#352']\n"
+      "['HY.1', 'sars-cov-2-variants/lineage-proposals#453']\n",
+      "['EG.5.1.2', 'sars-cov-2-variants/lineage-proposals#301']\n",
+      "['FP.2.1.1', 'sars-cov-2-variants/lineage-proposals#329']\n",
+      "['GJ.1.2.1', 'sars-cov-2-variants/lineage-proposals#446']\n",
+      "['HW.1', 'sars-cov-2-variants/lineage-proposals#71']\n",
+      "['HW.1.1', 'sars-cov-2-variants/lineage-proposals#452']\n"
      ]
     }
    ],
@@ -358,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "id": "1c9369e1",
    "metadata": {},
    "outputs": [
@@ -366,8 +324,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Add  2  references from cov-lineages/pango-designation.\n",
-      "Add  34  references from sars-cov-2-variants/lineage-proposals.\n"
+      "Add  0  references from cov-lineages/pango-designation.\n",
+      "Add  9  references from sars-cov-2-variants/lineage-proposals.\n"
      ]
     }
    ],
@@ -405,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7756372f",
    "metadata": {},
    "outputs": [],
