modified:   automated-issue-ref.ipynb 	modified:   lineage_notes.txt

--- a/automated-issue-ref.ipynb
+++ b/automated-issue-ref.ipynb
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "1c9369e1",
    "metadata": {},
    "outputs": [
@@ -365,8 +365,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Add  4  references from cov-lineages/pango-designation.\n",
-      "Add  31  references from sars-cov-2-variants/lineage-proposals.\n"
+      "Add  5  references from cov-lineages/pango-designation.\n",
+      "Upgrade  0  references from cov-lineages/pango-designation.\n",
+      "Add  18  references from sars-cov-2-variants/lineage-proposals.\n"
      ]
     }
    ],
@@ -388,7 +389,8 @@
     "upgrade_count=0\n",
     "for i in range(len(data)):\n",
     "    linsp=data[i].split()\n",
-    "    if linsp[0] in missing_refs:\n",
+    "    \n",
+    "    if (len(linsp)>0) and (linsp[0] in missing_refs):\n",
     "        if \"From\" in data[i]:\n",
     "            data[i]=data[i].split(\" From\")[0]\n",
     "            upgrade_count+=1\n",
@@ -409,18 +411,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7756372f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fix some bug to adapt to new manual format that does not contain #. \n",
+    "# replace all \"From\" with \", from\" \n",
     "w=open(\"lineage_notes.txt\",'r')\n",
     "lines=w.readlines()\n",
     "for i in range(len(lines)):\n",
-    "    em=examine_line(lines[i])\n",
-    "    if em!='':\n",
-    "        lines[i]=em\n",
+    "    lines[i]=lines[i].replace(\" From\",\", from\")\n",
     "w.close()\n",
     "w=open(\"lineage_notes.txt\",'w',newline='\\n')\n",
     "w.writelines(lines)\n",
