Add 5 autorefs from main repo and 18 from lineage-proposal repo (#2299)
* modified:   automated-issue-ref.ipynb
	modified:   autoref/milestone.txt
	modified:   autoref/missing_refs.txt
	modified:   lineage_notes.txt

* modified:   automated-issue-ref.ipynb
	modified:   lineage_notes.txt

--- a/automated-issue-ref.ipynb
+++ b/automated-issue-ref.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "f64573a2",
    "metadata": {
     "scrolled": true
@@ -109,7 +109,11 @@
       "processed  950 milestones\n",
       "processed  960 milestones\n",
       "processed  970 milestones\n",
-      "processed  980 milestones\n"
+      "processed  980 milestones\n",
+      "processed  990 milestones\n",
+      "processed  1000 milestones\n",
+      "processed  1010 milestones\n",
+      "processed  1020 milestones\n"
      ]
     }
    ],
@@ -187,7 +191,7 @@
     "                    \n",
     "                    for item in title_words:\n",
     "                        milestone_list.append([milestone, item, title])\n",
-    "                        if linsp[1]!='withdrawn':\n",
+    "                        if item!='withdrawn':\n",
     "                            # only add milestones to those without already assigned\n",
     "                            if not(item in milestone_title_dict):\n",
     "                                milestone_title_dict[item]=[title,milestone]\n",
@@ -206,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "88a367db",
    "metadata": {},
    "outputs": [],
@@ -243,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "f5b15585",
    "metadata": {},
    "outputs": [],
@@ -274,41 +278,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['HC.2', 'sars-cov-2-variants/lineage-proposals#433']\n",
-      "['JB.2', 'sars-cov-2-variants/lineage-proposals#209']\n",
-      "['JB.2.1', 'sars-cov-2-variants/lineage-proposals#209']\n",
-      "['GK.1.4', 'sars-cov-2-variants/lineage-proposals#504']\n",
-      "['GK.2.2', 'sars-cov-2-variants/lineage-proposals#470']\n",
-      "['JD.1.1', '#2174']\n",
-      "['XBB.1.5.103', '#2192']\n",
-      "['FL.1.5.2', 'sars-cov-2-variants/lineage-proposals#614']\n",
-      "['EG.2.2', 'sars-cov-2-variants/lineage-proposals#517']\n",
-      "['EG.2.3', 'sars-cov-2-variants/lineage-proposals#587']\n",
-      "['EG.2.4', 'sars-cov-2-variants/lineage-proposals#586']\n",
-      "['EG.2.5', 'sars-cov-2-variants/lineage-proposals#445']\n",
-      "['HK.3.1', 'sars-cov-2-variants/lineage-proposals#580']\n",
-      "['HK.8', '#2230']\n",
-      "['HK.9', 'sars-cov-2-variants/lineage-proposals#564']\n",
-      "['HK.10', 'sars-cov-2-variants/lineage-proposals#537']\n",
-      "['JG.1', 'sars-cov-2-variants/lineage-proposals#519']\n",
-      "['JJ.1', '#2208']\n",
-      "['JF.1', 'sars-cov-2-variants/lineage-proposals#531']\n",
-      "['JF.2', 'sars-cov-2-variants/lineage-proposals#457']\n",
-      "['HF.1.1', 'sars-cov-2-variants/lineage-proposals#521']\n",
-      "['XBB.1.16.23', 'sars-cov-2-variants/lineage-proposals#517']\n",
-      "['GA.4.1', 'sars-cov-2-variants/lineage-proposals#661']\n",
-      "['GW.1.1', 'sars-cov-2-variants/lineage-proposals#355']\n",
-      "['XBB.1.41.2', 'sars-cov-2-variants/lineage-proposals#389']\n",
-      "['JE.1', 'sars-cov-2-variants/lineage-proposals#597']\n",
-      "['GM.3.1', 'sars-cov-2-variants/lineage-proposals#450']\n",
-      "['HG.2', 'sars-cov-2-variants/lineage-proposals#652']\n",
-      "['GE.1.1', 'sars-cov-2-variants/lineage-proposals#367']\n",
-      "['GE.1.2', 'sars-cov-2-variants/lineage-proposals#200']\n",
-      "['GE.1.3', 'sars-cov-2-variants/lineage-proposals#102']\n",
-      "['GS.2', 'sars-cov-2-variants/lineage-proposals#93']\n",
-      "['GS.3', 'sars-cov-2-variants/lineage-proposals#669']\n",
-      "['GS.4', 'sars-cov-2-variants/lineage-proposals#668']\n",
-      "['GS.4.1', 'sars-cov-2-variants/lineage-proposals#668']\n"
+      "['DV.7.1.1', 'sars-cov-2-variants/lineage-proposals#732']\n",
+      "['DV.7.1.2', '#2258']\n",
+      "['JP.1', 'sars-cov-2-variants/lineage-proposals#655']\n",
+      "['CH.1.1.32', '#2150']\n",
+      "['GK.2.1.1', 'sars-cov-2-variants/lineage-proposals#716']\n",
+      "['GK.2.3', 'sars-cov-2-variants/lineage-proposals#813']\n",
+      "['GK.4', '#2276']\n",
+      "['JD.1.1.1', 'sars-cov-2-variants/lineage-proposals#864']\n",
+      "['JD.1.1.2', 'sars-cov-2-variants/lineage-proposals#754']\n",
+      "['FL.1.6', 'sars-cov-2-variants/lineage-proposals#59']\n",
+      "['FL.15.1.1', 'sars-cov-2-variants/lineage-proposals#646']\n",
+      "['FL.15.2', 'sars-cov-2-variants/lineage-proposals#578']\n",
+      "['FL.20.2', 'sars-cov-2-variants/lineage-proposals#571']\n",
+      "['FL.32', 'sars-cov-2-variants/lineage-proposals#719']\n",
+      "['FL.32.1', 'sars-cov-2-variants/lineage-proposals#719']\n",
+      "['FL.33.1', 'sars-cov-2-variants/lineage-proposals#828']\n",
+      "['HK.3.3', 'sars-cov-2-variants/lineage-proposals#744']\n",
+      "['JG.3', '#2231']\n",
+      "['EG.5.1.8', 'sars-cov-2-variants/lineage-proposals#537']\n",
+      "['EG.6.1.1', 'sars-cov-2-variants/lineage-proposals#546']\n",
+      "['JM.1', 'sars-cov-2-variants/lineage-proposals#569']\n",
+      "['GW.5', '#2142']\n",
+      "['GS.5', 'sars-cov-2-variants/lineage-proposals#768']\n"
      ]
     }
    ],
@@ -345,7 +337,15 @@
     "                        \n",
     "                    missing_milestones.append([title,issue_num])\n",
     "                    print(missing_milestones[-1])\n",
-    "                \n",
+    "        if ('lineage-proposals#' in line):\n",
+    "            if title in milestone_title_dict:\n",
+    "                if not('sars' in milestone_title_dict[title][1]):\n",
+    "                    issue_num=read_milestone_issues(title)\n",
+    "                    if issue_num!='0':\n",
+    "                        issue_num='#'+issue_num\n",
+    "\n",
+    "                        missing_milestones.append([title,issue_num])\n",
+    "                        print(missing_milestones[-1])\n",
     "                    \n",
     "#rewrite lineage_notes.txt\n",
     "w=open(\"autoref/missing_refs.txt\",'w')\n",
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "1c9369e1",
    "metadata": {},
    "outputs": [
@@ -365,8 +365,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Add  4  references from cov-lineages/pango-designation.\n",
-      "Add  31  references from sars-cov-2-variants/lineage-proposals.\n"
+      "Add  5  references from cov-lineages/pango-designation.\n",
+      "Upgrade  0  references from cov-lineages/pango-designation.\n",
+      "Add  18  references from sars-cov-2-variants/lineage-proposals.\n"
      ]
     }
    ],
@@ -385,16 +386,22 @@
     "w.close()\n",
     "normal_count=0\n",
     "sub_count=0\n",
+    "upgrade_count=0\n",
     "for i in range(len(data)):\n",
     "    linsp=data[i].split()\n",
-    "    if linsp[0] in missing_refs:\n",
+    "    \n",
+    "    if (len(linsp)>0) and (linsp[0] in missing_refs):\n",
+    "        if \"From\" in data[i]:\n",
+    "            data[i]=data[i].split(\" From\")[0]\n",
+    "            upgrade_count+=1\n",
     "        data[i]=data[i].replace('\\n','')+\" From \"+missing_refs[linsp[0]]+'\\n'\n",
     "        if 'sars' in missing_refs[linsp[0]]:\n",
     "            sub_count+=1\n",
     "        else:\n",
     "            normal_count+=1\n",
     "\n",
-    "print(\"Add \",normal_count,\" references from cov-lineages/pango-designation.\")\n",
+    "print(\"Add \",normal_count-upgrade_count,\" references from cov-lineages/pango-designation.\" )\n",
+    "print(\"Upgrade \",upgrade_count,\" references from cov-lineages/pango-designation.\" )\n",
     "print(\"Add \",sub_count,\" references from sars-cov-2-variants/lineage-proposals.\")\n",
     "\n",
     "w=open(\"lineage_notes.txt\",'w',newline='\\n')\n",
@@ -404,18 +411,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7756372f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fix some bug to adapt to new manual format that does not contain #. \n",
+    "# replace all \"From\" with \", from\" \n",
     "w=open(\"lineage_notes.txt\",'r')\n",
     "lines=w.readlines()\n",
     "for i in range(len(lines)):\n",
-    "    em=examine_line(lines[i])\n",
-    "    if em!='':\n",
-    "        lines[i]=em\n",
+    "    lines[i]=lines[i].replace(\" From\",\", from\")\n",
     "w.close()\n",
     "w=open(\"lineage_notes.txt\",'w',newline='\\n')\n",
     "w.writelines(lines)\n",
